@@ -22,6 +22,8 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.Sort.Direction;
 
 @ExtendWith(MockitoExtension.class)
 public class SlurFilterServiceUnitTests {
@@ -38,10 +40,11 @@ public class SlurFilterServiceUnitTests {
 
     String regex = "exampleRegex";
 
-    when(slurFilterRepository.findAll()).thenReturn(List.of());
+    when(slurFilterRepository.findAll(Sort.by(Direction.ASC, "id"))).thenReturn(
+        Collections.emptyList());
     slurFilterService.updateOrCreateLemmySlur(regex);
 
-    verify(slurFilterRepository, times(1)).findAll();
+    verify(slurFilterRepository, times(1)).findAll(Sort.by(Direction.ASC, "id"));
     verify(slurFilterRepository, times(1)).save(any(SlurFilter.class));
     verify(slurFilterRepository).save(slurFilterArgumentCaptor.capture());
     assertEquals(regex, slurFilterArgumentCaptor.getValue().getSlurRegex(),
@@ -57,23 +60,24 @@ public class SlurFilterServiceUnitTests {
     SlurFilter existingFilter = new SlurFilter();
     existingFilter.setSlurRegex("oldRegex");
 
-    when(slurFilterRepository.findAll()).thenReturn(List.of(existingFilter));
+    when(slurFilterRepository.findAll(Sort.by(Direction.ASC, "id"))).thenReturn(
+        List.of(existingFilter));
 
     slurFilterService.updateOrCreateLemmySlur(regex);
 
-    verify(slurFilterRepository, times(1)).findAll();
-    verify(slurFilterRepository, times(1)).save(existingFilter);
+    verify(slurFilterRepository, times(1)).findAll(Sort.by(Direction.ASC, "id"));
     assertEquals(regex, existingFilter.getSlurRegex(), "Saved slur regex was not updated");
   }
 
   @Test
   void givenFilterDoesNotExist_whenGetLemmySlurFilter_thenCreateSaveAndReturnFilter() {
 
-    when(slurFilterRepository.findAll()).thenReturn(Collections.emptyList());
+    when(slurFilterRepository.findAll(Sort.by(Direction.ASC, "id"))).thenReturn(
+        Collections.emptyList());
 
     SlurFilter slurFilter = slurFilterService.getLemmySlurFilter();
 
-    verify(slurFilterRepository, times(1)).findAll();
+    verify(slurFilterRepository, times(1)).findAll(Sort.by(Direction.ASC, "id"));
     verify(slurFilterRepository, times(1)).save(any(SlurFilter.class));
     verify(slurFilterRepository).save(slurFilterArgumentCaptor.capture());
     assertEquals("", slurFilterArgumentCaptor.getValue().getSlurRegex(),
@@ -91,13 +95,12 @@ public class SlurFilterServiceUnitTests {
     SlurFilter existingFilter = new SlurFilter();
     existingFilter.setSlurRegex("oldRegex");
 
-    when(slurFilterRepository.findAll()).thenReturn(List.of(existingFilter));
+    when(slurFilterRepository.findAll(Sort.by(Direction.ASC, "id"))).thenReturn(
+        List.of(existingFilter));
 
     SlurFilter slurFilter = slurFilterService.getLemmySlurFilter();
 
-    verify(slurFilterRepository, times(1)).findAll();
-    verify(slurFilterRepository, times(1)).save(existingFilter);
-    verify(slurFilterRepository).save(slurFilterArgumentCaptor.capture());
+    verify(slurFilterRepository, times(1)).findAll(Sort.by(Direction.ASC, "id"));
     assertEquals("oldRegex", slurFilter.getSlurRegex(),
         "Returned slur regex was not existing value");
   }
@@ -222,8 +225,8 @@ public class SlurFilterServiceUnitTests {
 
     when(slurFilterRepository.findAll()).thenReturn(List.of(blockFilter));
 
-    SlurFilterBlockedException exception = assertThrows(SlurFilterBlockedException.class, () ->
-        slurFilterService.censorText(unsafeText));
+    SlurFilterBlockedException exception = assertThrows(SlurFilterBlockedException.class,
+        () -> slurFilterService.censorText(unsafeText));
 
     verify(slurFilterRepository, times(1)).findAll();
     assertEquals("Text blocked by slur filter", exception.getMessage(), "Unexpected message");
@@ -240,8 +243,8 @@ public class SlurFilterServiceUnitTests {
 
     when(slurFilterRepository.findAll()).thenReturn(List.of(reportFilter));
 
-    SlurFilterReportException exception = assertThrows(SlurFilterReportException.class, () ->
-        slurFilterService.censorText(unsafeText));
+    SlurFilterReportException exception = assertThrows(SlurFilterReportException.class,
+        () -> slurFilterService.censorText(unsafeText));
 
     verify(slurFilterRepository, times(1)).findAll();
     assertEquals("Text should be reported", exception.getMessage(), "Unexpected message");
